fix: content update

--- a/docs/pages/surge-metalayer/architecture/adapters.mdx
+++ b/docs/pages/surge-metalayer/architecture/adapters.mdx
@@ -1,11 +1,11 @@
 ---
-title: Adapters
+title: DevKit Adapters
 description: Connecting Rollups and dApps to the Metalayer
 ---
 
 import ZoomImage from "../../../components/ZoomImage";
 
-# Adapters [Connecting Rollups and dApps to the Metalayer]
+# DevKit Adapters [Connecting Rollups and dApps to the Metalayer]
 
 The Surge platform is developing Adapters specifically designed for integration with frameworks like Rollkit and the Sovereign SDK. These Adapters provide developers with a flexible toolkit to easily connect their rollups or meta-protocol dApps directly to the Surge MetaLayer. Through this seamless integration, any rollup or dApp can anchor its data on Bitcoin, leveraging Surge’s validation and proof aggregation to securely inscribe zk-proofs.
 
