--- a/docs/pages/metalayer/architecture/altvms.mdx
+++ b/docs/pages/metalayer/architecture/altvms.mdx
@@ -5,5 +5,24 @@ description:
 
 import ZoomImage from "../../../components/ZoomImage";
 
-# Alt VMs []
+# Alt VMs [Flexible VMs designed for scaling Bitcoin]
 
+Surge's MetaLayer is designed with flexibility in mind, offering support for multiple Virtual Machines (VMs) to accommodate a wide range of development environments. This flexibility enables developers to build decentralized applications (dApps), rollups, and DeFi solutions using their preferred VM, leveraging Surge’s underlying scalability and Bitcoin’s robust security.
+
+### Multi-VM Support for Enhanced Flexibility
+
+Surge provides native compatibility with various VMs, including but not limited to:
+
+- **Ethereum Virtual Machine (EVM):** For developers accustomed to Ethereum’s ecosystem, EVM support allows seamless deployment of Ethereum-compatible smart contracts on Bitcoin. This brings the vast DeFi and dApp ecosystems built on Ethereum into Bitcoin's security framework, enabling projects to expand their reach and utility.
+
+- **MoveVM:** Popularized by protocols like Aptos and Sui, MoveVM offers a unique development environment focused on resource-oriented programming. Surge’s support for MoveVM allows developers to build efficient and secure applications, benefiting from Move’s powerful transaction model and Bitcoin’s decentralized security.
+
+- **WasmVM:** With growing adoption across the blockchain space, Wasm enables high-performance applications written in a variety of languages. By integrating Wasm support, Surge allows developers to tap into a wide range of tools and languages, enabling the creation of high-speed, cross-platform applications.
+
+### Advantages of Flexible VM Support
+
+- **Interoperability Across Ecosystems:** By supporting multiple VMs, Surge bridges ecosystems, making it easier for applications to interact with different blockchain networks and enhance interoperability. This flexibility facilitates cross-chain development, allowing projects to leverage Bitcoin's security with a development environment of their choice.
+
+- **Customized Development Environments:** Surge’s VM flexibility allows developers to select the most suitable VM for their specific use case, whether it’s building DeFi applications on EVM, leveraging resource-oriented programming on MoveVM, or utilizing Wasm for performance-oriented dApps. This freedom reduces constraints and encourages innovation.
+
+- **Adaptability to Emerging Technologies:** As blockchain technology evolves, new VMs and programming paradigms will continue to emerge. Surge’s modular architecture ensures that additional VMs can be integrated into the MetaLayer as needed, allowing developers to stay at the forefront of technological advancements without being locked into a specific environment.
