fix: content update

--- a/docs/pages/metalayer/architecture/altvms.mdx
+++ b/docs/pages/metalayer/architecture/altvms.mdx
@@ -1,11 +1,11 @@
 ---
-title: Alt VMs
-description: 
+title: Flexibile VMs
+description: Flexible VMs designed for scaling Bitcoin
 ---
 
 import ZoomImage from "../../../components/ZoomImage";
 
-# Alt VMs [Flexible VMs designed for scaling Bitcoin]
+# Flexible VMs [Flexible VMs designed for scaling Bitcoin]
 
 Surge's MetaLayer is designed with flexibility in mind, offering support for multiple Virtual Machines (VMs) to accommodate a wide range of development environments. This flexibility enables developers to build decentralized applications (dApps), rollups, and DeFi solutions using their preferred VM, leveraging Surge’s underlying scalability and Bitcoin’s robust security.
 
@@ -18,11 +18,3 @@ Surge provides native compatibility with various VMs, including but not limited 
 - **MoveVM:** Popularized by protocols like Aptos and Sui, MoveVM offers a unique development environment focused on resource-oriented programming. Surge’s support for MoveVM allows developers to build efficient and secure applications, benefiting from Move’s powerful transaction model and Bitcoin’s decentralized security.
 
 - **WasmVM:** With growing adoption across the blockchain space, Wasm enables high-performance applications written in a variety of languages. By integrating Wasm support, Surge allows developers to tap into a wide range of tools and languages, enabling the creation of high-speed, cross-platform applications.
-
-### Advantages of Flexible VM Support
-
-- **Interoperability Across Ecosystems:** By supporting multiple VMs, Surge bridges ecosystems, making it easier for applications to interact with different blockchain networks and enhance interoperability. This flexibility facilitates cross-chain development, allowing projects to leverage Bitcoin's security with a development environment of their choice.
-
-- **Customized Development Environments:** Surge’s VM flexibility allows developers to select the most suitable VM for their specific use case, whether it’s building DeFi applications on EVM, leveraging resource-oriented programming on MoveVM, or utilizing Wasm for performance-oriented dApps. This freedom reduces constraints and encourages innovation.
-
-- **Adaptability to Emerging Technologies:** As blockchain technology evolves, new VMs and programming paradigms will continue to emerge. Surge’s modular architecture ensures that additional VMs can be integrated into the MetaLayer as needed, allowing developers to stay at the forefront of technological advancements without being locked into a specific environment.
