fix: content update for verifiers

--- a/docs/pages/metalayer/architecture/indexers.mdx
+++ b/docs/pages/metalayer/architecture/indexers.mdx
@@ -1,6 +1,6 @@
 ---
 title: UTXO Indexers
-description: Enhancing Rollup Functionality
+description: Ensuring Transparent and Verifiable Bitcoin Finality
 ---
 
 import ZoomImage from "../../../components/ZoomImage";
