fix: content update for composability and interop

--- a/docs/pages/metalayer/architecture/altvms.mdx
+++ b/docs/pages/metalayer/architecture/altvms.mdx
@@ -7,14 +7,6 @@ import ZoomImage from "../../../components/ZoomImage";
 
 # Flexible VMs [Flexible VMs designed for scaling Bitcoin]
 
-Surge's MetaLayer is designed with flexibility in mind, offering support for multiple Virtual Machines (VMs) to accommodate a wide range of development environments. This flexibility enables developers to build decentralized applications (dApps), rollups, and DeFi solutions using their preferred VM, leveraging Surge’s underlying scalability and Bitcoin’s robust security.
+The Surge MetaLayer supports multiple Virtual Machines (VMs) to accommodate diverse development needs. This multi-VM framework empowers developers to build dApps, rollups, and DeFi solutions on Bitcoin while leveraging Surge’s scalability and Bitcoin’s inherent security.
 
-### Multi-VM Support for Enhanced Flexibility
-
-Surge provides native compatibility with various VMs, including but not limited to:
-
-- **Ethereum Virtual Machine (EVM):** For developers accustomed to Ethereum’s ecosystem, EVM support allows seamless deployment of Ethereum-compatible smart contracts on Bitcoin. This brings the vast DeFi and dApp ecosystems built on Ethereum into Bitcoin's security framework, enabling projects to expand their reach and utility.
-
-- **MoveVM:** Popularized by protocols like Aptos and Sui, MoveVM offers a unique development environment focused on resource-oriented programming. Surge’s support for MoveVM allows developers to build efficient and secure applications, benefiting from Move’s powerful transaction model and Bitcoin’s decentralized security.
-
-- **WasmVM:** With growing adoption across the blockchain space, Wasm enables high-performance applications written in a variety of languages. By integrating Wasm support, Surge allows developers to tap into a wide range of tools and languages, enabling the creation of high-speed, cross-platform applications.
+Starting with Surge zkEVMs, which are fully EVM-compatible. In the future, we plan to support additional VMs, including MoveVM, WasmVM, and SVM, providing developers with even greater flexibility to build on Bitcoin
