--- a/docs/pages/metalayer/interopability.mdx
+++ b/docs/pages/metalayer/interopability.mdx
@@ -11,16 +11,12 @@ The Surge Metalayer is designed with interoperability at its core, enabling seam
 
 ### Cross-Rollup Communication
 
-Surge allows different rollups and blockchain networks deployed on the metalayer to communicate and transfer assets efficiently. By leveraging zkProofs, Surge supports the submission of proofs not only within its own ecosystem but also across different chains, facilitating asset bridging between rollups (e.g., Rollup A to Rollup B). This capability greatly expands the scope of interoperable DeFi and dApp ecosystems.
+Surge allows different rollups and blockchain networks deployed on the metalayer to communicate and transfer assets efficiently. By leveraging zkProofs, Surge supports the submission of proofs not only within its own ecosystem but also across different chains, facilitating asset bridging between rollups (e.g., Rollup A to Rollup B). 
 
 ### IBC Integration for Enhanced Interoperability
 
 One of the standout advantages of the Surge Metalayer is its integration with Cosmos technology, which enables the Inter-Blockchain Communication (IBC) protocol. IBC provides a standardized framework for secure, trust-minimized communication between blockchains. Through IBC, assets can be seamlessly bridged from the Surge Metalayer to other IBC-enabled chains, ensuring a high degree of interoperability with the broader blockchain ecosystem. Notably, IBC is not limited to chains built with the Cosmos SDK, further broadening Surge’s interoperability reach.
 
-To learn more about IBC, refer to [Cosmos SDK's IBC documentation](https://tutorials.cosmos.network/academy/3-ibc/1-what-is-ibc.html).
+To learn more about IBC, refer [here](https://tutorials.cosmos.network/academy/3-ibc/1-what-is-ibc.html).
 
 With Surge’s zkProof aggregation and IBC compatibility, the metalayer ensures that assets and data can move freely across different blockchain environments, empowering developers and users with an interconnected and scalable decentralized infrastructure.
-
-### Interconnected and Scalable Infrastructure
-
-By combining zkProof aggregation with IBC compatibility, Surge ensures that assets and data can move freely and securely across different blockchain environments. This interconnected framework empowers developers to create scalable, interoperable applications, providing users with a seamless experience across multiple decentralized platforms. Surge's commitment to interoperability fosters a decentralized infrastructure that extends beyond isolated networks, supporting a unified blockchain ecosystem.
