--- a/docs/pages/metalayer/architecture/adapters.mdx
+++ b/docs/pages/metalayer/architecture/adapters.mdx
@@ -7,8 +7,8 @@ import ZoomImage from "../../../components/ZoomImage";
 
 # DevKit Adapters [Connecting Rollups and dApps to the Metalayer]
 
-The Surge platform is developing Adapters specifically designed for integration with frameworks like Rollkit and the Sovereign SDK. These Adapters provide developers with a flexible toolkit to easily connect their rollups or meta-protocol dApps directly to the Surge MetaLayer. Through this seamless integration, any rollup or dApp can anchor its data on Bitcoin, leveraging Surge’s validation and proof aggregation to securely inscribe zk-proofs.
+Surge’s DevKit Adapters facilitate seamless integration for rollups and dApps, connecting them directly to the Surge MetaLayer. Designed for compatibility with frameworks like Rollkit and the Sovereign SDK, these Adapters offer developers a plug-and-play toolkit that accelerates development. Through the Surge MetaLayer, any rollup or dApp can anchor data on Bitcoin, benefiting from Surge’s robust zk-proof validation and aggregation
 
-To streamline this process, Surge is also rolling out the Surge Dev Kit, which equips developers with pre-configured commands for direct integration. The Dev Kit simplifies anchoring operations, enabling rollup providers and meta-protocol developers to plug into the MetaLayer and submit their data with minimal effort. Surge’s system then verifies this data, consolidates proofs, and submits only the final aggregated proof to Bitcoin, ensuring scalability and cost-efficiency.
+The Surge Dev Kit provides pre-configured commands and flexible options that adapt to various programming languages, allowing developers to fast-track integration using their preferred tools. With just a few steps, rollup providers and meta-protocol developers can link into the MetaLayer, streamlining their anchoring process. Surge then verifies and consolidates proofs, submitting only the final aggregated proof to Bitcoin, which enhances scalability and minimizes costs.
 
-For early access to the Surge Dev Kit and to start integrating, [click here](https://tally.so/r/n0Pzb9).
+For early access to the Surge Dev Kit and to begin integrating, [click here](https://tally.so/r/n0Pzb9).
