--- a/docs/pages/metalayer/architecture/altvms.mdx
+++ b/docs/pages/metalayer/architecture/altvms.mdx
@@ -9,4 +9,4 @@ import ZoomImage from "../../../components/ZoomImage";
 
 The Surge MetaLayer supports multiple Virtual Machines (VMs) to accommodate diverse development needs. This multi-VM framework empowers developers to build dApps, rollups, and DeFi solutions on Bitcoin while leveraging Surge’s scalability and Bitcoin’s inherent security.
 
-Starting with Surge zkEVMs, which are fully EVM-compatible. In the future, we plan to support additional VMs, including MoveVM, WasmVM, and SVM, providing developers with even greater flexibility to build on Bitcoin
+Starting with Surge zkEVMs, which are fully EVM-compatible. In the future, we plan to support additional VMs, including MoveVM, WasmVM, and SVM, providing developers with even greater flexibility to build on Bitcoin.
