--- a/docs/pages/developer-guides/wallets-tokens/connect-keplr.mdx
+++ b/docs/pages/developer-guides/wallets-tokens/connect-keplr.mdx
@@ -5,4 +5,16 @@ description: Connect Keplr Wallet
 
 # Connect Keplr Wallet
 
-**_Coming Soon!_**
+**Note**: We are in the Testnet stage, so the API may undergo incompatible changes in the future. If you encounter any issues, please join our [Discord](https://discord.com/invite/surgebuild) to get in touch with the Surge Team.
+
+[![Logo](https://assets.website-files.com/61e518f84aa2a6645094f0ad/621751811f62db2c7da50744_Keplr_256.png)Keplr Wallet | First and Leading IBC Wallet](https://www.keplr.app/)
+
+## Add Fiamma Testnet Chain
+
+Visit [https://chains.keplr.app](https://chains.keplr.app) search for "**Surge Testnet**" and add it to your Keplr wallet.
+
+Add "**Surge Testnet**" Chain to Keplr:
+
+replace this img
+
+<img src="/assets/fia-keplr.png" alt="" />
