--- a/docs/pages/developer-guides/network-information.mdx
+++ b/docs/pages/developer-guides/network-information.mdx
@@ -5,4 +5,27 @@ description: Setup Nodes for Devnet
 
 # Network Information
 
-**_Coming Soon!_**
+# surge-testnet-1
+
+## Surge Version
+
+Version [v1.0.0](https://github.com/surgebuild)
+
+## Seed Nodes
+
+### Surge Foundation
+
+- 348c6ded992c44af63f6ffa564f33ecd40fbe587@18.182.20.173:26656
+- 5aa6e9894f17f741f602c6fe83e74e2640a5cf3a@35.73.202.182:26656
+
+## RPC Nodes
+
+- https://testnet-rpc.fiammachain.io
+
+## LCD (Node API) Nodes
+
+- https://testnet-api.fiammachain.io
+
+## GRPC Nodes
+
+- testnet-grpc.fiammachain.io:443
